Add the listed files to repo

--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@
 *{
     margin : 0;
     padding: 0;
-    box-sizing: boder-box;
-    font-family: "Besley" , serif;
+    box-sizing: border-box;
+    font-family: "Besley", serif;
     border: none;
     outline: none;
     transition: 0.2s linear all;
@@ -12,27 +12,27 @@
 
 }
 
-:root{
+:root {
     --main:#ff0720;
-    -box-shadow: 0.5rem 1rem 1.5rem rgba(0,0,0,0.7);
+    --box-shadow: 0.5rem 1rem 1.5rem rgba(0,0,0,0.7);
     --border: 0.4rem solid var(--main);
 
 }
-*::selection{
+*::selection {
     background: var(--main);
     color:#000;
 
 }
-html{
+html {
     font-size: 62.5%;
     overflow-x: hidden;
     scroll-padding-top:9rem;
     scroll-behavior:smooth;
 }
-section{
+section {
     padding: 2rem 7%;
 }
-.btn{
+.btn {
     display: inline-block;
     color: var(--main);
     cursor: pointer;
@@ -41,53 +41,53 @@ section{
     margin-top: 1rem;
     font-size: 1.7rem;
 }
-.btn:hover{
+.btn:hover {
     letter-spacing: 0.2rem;
 }
-.heading{
+.heading {
     text-align: center;
     font-size: 4rem;
     text-transform: uppercase;
     padding-bottom: 3.5rem;
 }
-.heading span{
+.heading span {
     color: var(--main);
 }
-html::-webkit-scrollbar{
+html::-webkit-scrollbar {
     width: 10px;
 }
-html::-webkit-scrollbar-thumb{
+html::-webkit-scrollbar-thumb {
     background: var(--main);
 }
-html::-webkit-scrollbar-track{
+html::-webkit-scrollbar-track {
     background: #000;
 }
 /* Header Start */
-header{
+header {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     box-shadow: var(--box-shadow);
     background: #000;
-    z-index: 1000;
+    z-index: 10;
     display: flex;
     justify-content:space-between;
     align-items: center;
     padding: 1.5rem 9%;
 }
 
-header .logo img{
+header .logo img {
     height: 6rem;    
 }
 
-header .navbar a{
+header .navbar a {
   color: #fff;
   margin-left: 2rem;
   font-size: 1.7rem;
 }
 
-header .navbar a:hover{
+header .navbar a:hover {
     color:var(--main);
 }
 
@@ -101,103 +101,373 @@ header .navbar a:hover{
 /* Header End */
 
 /* Home Section Starts*/
-.home{
-    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.6)),url("images/header1.jpg") no-repeat;
-    min-height:100vh;
+.home {
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)), url("images.jpg\header2.jpg") no-repeat;
+    min-height: 100vh;
     background-position: center;
     background-size: cover;
     display: flex;
     align-items: center;
-    object-fit: cover;  
+    object-fit: cover;
 }
-.home .content{
+
+.home .content {
     max-width: 60rem;
     color: #fff;
 }
-.home .content h3{
+
+.home .content h3 {
     font-size: 6rem;
     text-transform: uppercase;
 }
-.home .content p{
+
+.home .content p {
     font-size: 2rem;
     font-weight: lighter;
     color: #ccc;
-    line-height: 1.8; 
+    line-height: 1.8;
     padding: 1rem 0;
-} 
+}
+
+
+#countdown {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+#timer {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    font-size: 2em;
+}
+
+#timer div {
+    background: #333;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+#timer span {
+    font-weight: bold;
+}
+
+
 /*Home Section Ends*/
 
+
 /*About us Section Start*/
-.about{
+.about {
     margin-bottom: 200px;
 }
-.about .row{
+.about .row {
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
     align-items: center; 
 }
-.about .row .img{
+.about .row .img {
     flex: 1 1 45rem;
     padding: 1rem;
 }
-.about .row .content{
+.about .row .content {
     flex: 1 1 45rem;
 }
-.about img{
+.about img {
     border: var(--border);
     border-radius: 0.5rem;
     width: 100%;
 }
-.about .row .content h3{
+.about .row .content h3 {
     font-size: 3.5rem;
 }
 .about .row .content p{
     line-height: 2;
     font-size: 1.5rem;
     padding: 1rem 0;
-
 }
+
 /*About us Section End*/
 
 /* Services Section Start */
-.services{
-    margin-bottom: 200px;
+.services .boxContainer, .gallery .boxContainer {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+    gap: 1.5rem;   
 }
-.services .boxContainer{
-    display: flex;
-    grid-template-columns: repeat(auto-fit,minmax(27rem,1fr));
-    gap: 1rem;
-    
+.services .boxContainer .box {
+    text-align: center;
+    padding: 2.5rem;
+    background: rgba(20, 19, 19);
+    color: #fff;
+    border: var(--border);
+    cursor: pointer;
+}
+.services .boxContainder .box i {
+    height: 6rem;
+    width: 6rem;
+    line-height: 6rem;
+    border-radius: 50%;
+    font-size: 2.5rem;
+    background: var(--main);  
+}
+.services .boxContainer .box:hover i {
+    transform: scale(1.5)
+}
+.services .boxContainer .box h3 {
+    font-size: 2rem;
+    padding: 1rem 0;    
+}
+.services .boxContainer .box p {
+    font-size: 1.4rem;
+    line-height: 1.8;
+    color: #eee;
 }
 /* Services Section End */
 
+/* Gallery Section  Start*/
+.gallery {
+    margin-bottom: 200px;  
+}
+.gallery .boxContainer .box {
+    position: relative;
+    border: var(--main);
+    border-radius: 0.5rem;
+    height: 25rem;
+    cursor: pointer;
+    overflow: hidden;  
+}
+
+.gallery img {
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+}
+
+.gallery .boxContainer .box h3 {
+    position: absolute;
+    top: -10rem;
+    left: 0;
+    right: 0;
+    background: var(--main);
+    color: #fff;
+    text-align: center;
+    padding-bottom: 1rem;
+    font-size: 2rem;   
+}
+
+.gallery .boxContainer .box:hover h3 {
+    top: 0;
+
+}
+.gallery .boxContainer .box .icons {
+    position: absolute;
+    bottom: -10rem;
+    left: 0;
+    right: 0;
+    background: var(--main);
+    padding-top: 1rem;
+    text-align: center;   
+}
+
+.gallery .boxContainer .box:hover .icons {
+    bottom: 0;
+
+}
+.gallery .boxContainer .box .icons i {
+    font-size: 2rem;
+    margin: 0.5rem 1rem;
+    color: #fff; 
+}
+.gallery .boxContainer .box .icons i:hover {
+    color: #000;
+
+}
+/*Gallery Section End*/
+
+/*Review Section Start*/
+.review{
+    margin-bottom: 200px; 
+}
+.review .box {
+    border: var(--main);
+    border-radius: 0.5rem;
+    background: #000;
+    padding: 2rem;
+    position: relative;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+.review .fa-quote-right {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    color: var(--main);
+    font-size: 5rem;  
+}
+.review .box .user {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    
+}
+.review img {
+    height: 7rem;
+    width: 7rem;
+    object-fit: cover;
+    border-radius: 50%;
+}
+.review .box .user {
+    display: flex;
+    flex-direction: column;
+}
+.review .box .user h3 {
+    font-size: 2rem; 
+}
+.review .box .user span {
+    font-size: 1.5rem;
+    color: #eee;
+}
+.review .box p {
+    line-height: 2;
+    padding: 0.5rem 0;
+    font-size: 1.6rem;
+    color: #eee;
+    flex: 1;
+}
+
+/*Review Section End*/
+
+/*Contact Form Start*/
+.contact {
+    margin-bottom: 200px;
+}
+.contact .row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    align-items: center;
+}
+.contact .img{
+    flex: 1 1 45rem;
+}
+.contact img {
+    width: 100%;
+}
+.contact form{
+    flex: 1 1 45rem;
+    border: var(--main);
+    box-shadow: var(--box_shadow);
+    padding: 2rem;
+    text-align: center;
+    border-radius: 0.5rem; 
+}
+.contact form h3 {
+    font-size: 3rem;
+    padding-bottom: 1rem;
+}
+.contact form .box{
+    width: 100%;
+    margin: 0.7rem 0;
+    text-transform: none;
+    padding: 1rem;
+    font-size: 1.6rem;
+    border: var(--border);
+}
+/*Contact Form End*/
+
+/* Footer */
+footer {
+    background: var(--main);
+    padding: 2rem;
+    text-align: center;
+}
+footer a {
+    color: #fff;
+    font-size: 2rem;
+}
+/* Theme Toggle */
+.themeToggle {
+    position: fixed;
+    top: 10rem;
+    right: -20rem;
+    background: #000;
+    z-index: 10000;
+    width: 20rem;
+    text-align-last: center; 
+}
+.themeToggle .active {
+    right: 0;
+}
+.themeToggle .buttons {
+    display: flex;
+    justify-content: center;
+    flex-wrap:wrap;
+    gap: 1rem;
+    padding: 1rem;
+}
+.themeToggle .buttons .theme-btn {
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.toggleBtn {
+    position: absolute;
+    top: 0;
+    left: -5.9rem;
+    padding: 1.3rem 1.5rem;
+    background: #000;
+    cursor:pointer; 
+}
+.toggleBtn i {
+    color: #fff;
+    font-size: 3rem;
+    animation: spin 1.2s linear infinite;  
+}
+.toggleBtn h3 {
+    color: #fff;
+    padding: 1rem 0;
+    font-size: 2rem;
+}
+@keyframes spin {
+    0% {
+        transform: rotate(360deg);   
+    }
+}
+
 /*Media Query*/
-@media(max-width:991px){
+@media(max-width:991px) {
     html{
         font-size: 55%;
     }
 }
 
-@media(max-width:768px){
+@media(max-width:768px) {
     #MenuBtn {
         display: initial;
     }
-    .fa-times{
+    .fa-times {
         transform: rotate(180deg);
     }
-    header .navbar{
+    header .navbar {
         position: absolute;
         top: 100%;
         left: 0;
         right: 0;
         border: 0.2rem solid #222;
-        clip-path: polygon(0 0,100% 0,100% 0,0 0);
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
     }
-    header .navbar.active{
-        clip-path: polygon(0 0,100% 0,100% 100%,0% 100%);
+    header .navbar.active {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     }
-    header .navbar a{
+    header .navbar a {
         display: flex;
         background: #333;
         border-radius: 0.5rem;
@@ -206,7 +476,7 @@ header .navbar a:hover{
         padding: 1.3rem; 
     }
 
-    .home .content h3{
+    .home .content h3 {
         font-size: 3.5rem;   
     }
     .home .content p {
@@ -214,11 +484,11 @@ header .navbar a:hover{
 
     }
 }
-@media(max-width:450px){
-    html{
+@media(max-width:450px) {
+    html {
     font-size: 50%;  
 }
-    .home{
+    .home {
         background-position: left;
         justify-content: center;
         text-align: center;   
